<resources>
    <string name="app_name">SimpleTodoApp</string>

    <!-- button texts -->
    <string name="add_todo_item_btn_text">Add</string>

    <!-- edit text hints -->
    <string name="add_todo_edit_text_hint">Add an item here!</string>
    <string name="edit_todo_edit_text_string">Update the item!</string>

    <!-- common strings -->
    <string name="done">Done</string>
    <string name="save">Save</string>

    <!-- action bar names -->
    <string name="edit_item_action_bar_text">Edit Item</string>
    <string name="view_todo_items_action_bar_text">View Todo Items</string>

    <!-- theme texts -->
    <string name="change_theme">Change Theme</string>
    <string name="theme_light_mode">Light Mode</string>
    <string name="theme_dark_mode">Dark Mode</string>
    <string name="theme_follow_system">Follow System</string>

    <!-- miscellaneous -->
    <string name="tick">Tick</string>
    <string name="view_todo_items_btn_text">View Todo Items</string>
    <string name="settings_btn_text">Settings</string>

</resources>